# cli-github-client-automation

./: Makefile  README.md  clone_org_repos.py  main.py  pyproject.toml  tox.ini
ghca/: __init__.py  api.py  cli.py  gitops.py  types.py
ghca/cli/: main.py
ghca/cli/commands/: batch.py  clone.py  commit.py  discard.py  release.py
ghca/commands/: __init__.py
ghca/commands/clone/: __init__.py  cli.py  service.py
ghca/commands/commit/: __init__.py  cli.py  service.py
ghca/commands/update/: __init__.py  cli.py  service.py
ghca/config/: __init__.py  settings.py
ghca/core/: __init__.py  api.py  constants.py  git_client.py  github_client.py  gitops.py  types.py  utils.py
ghca/services/: batch.py  clone.py  commit.py  discard.py  release.py
