[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "github-client-automation"
version = "0.1.0"
description = "Clone/update/commit/push across an org's GitHub repos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "typer>=0.19.2",
]

[project.scripts]
ghca = "ghca.cli:app"

[tool.hatch.build.targets.sdist]
include = ["ghca"]

[tool.hatch.build.targets.wheel]
include = ["ghca"]

[tool.hatch.build.targets.wheel.sources]
"ghca" = "ghca"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
markers = [
  "integration: Assigns the test to the integration test suite.",
  "regression: Assigns the test to the regression test suite"
]

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
exclude = [".git", ".venv", "__pycache__", "proto"]
fixable = ["ALL"]
ignore = [
  "D104" # missing docstring in public package
]
select = [
  "ARG001", # unused arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle (docstring checks)
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]
